Map spacing fixed

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -56,3 +56,8 @@
 .shadow {
     box-shadow: 0 .5rem 1rem rgba(119, 119, 119, 0.61) !important;
 }
+
+#map {
+    margin: 30px;
+    border: solid 3px grey;
+}
